@@ -19,7 +19,7 @@
    +----------------------------------------------------------------------+
  */
  
-/* $Id: pgsql.c,v 1.244.2.22 2003/08/14 17:49:48 iliaa Exp $ */
+/* $Id: pgsql.c,v 1.244.2.23 2003/08/28 00:33:48 iliaa Exp $ */
 
 #include <stdlib.h>
 
@@ -1093,7 +1093,10 @@ static char *get_field_name(PGconn *pgsql, Oid oid, HashTable *list TSRMLS_DC)
 		char *tmp_oid, *end_ptr, *tmp_name;
 		list_entry new_oid_entry;
 
-		if ((result = PQexec(pgsql,"select oid,typname from pg_type")) == NULL) {
+		if ((result = PQexec(pgsql,"select oid,typname from pg_type")) == NULL || PQresultStatus(result) != PGRES_TUPLES_OK) {
+			if (result) {
+				PQclear(result);
+			}
 			smart_str_free(&str);
 			return empty_string;
 		}
