@@ -3,8 +3,9 @@ PHP 4                                                                      NEWS
 ?? ??? 2003, Version 4.3.4
 - Fixed disk_total_space() and disk_free_space() under FreeBSD. (Jon Parise)
 - Fixed crash bug when non-existing save/serializer handler was used. (Jani)
-- Fixed bug #25166 (WDDX serializer handler missing in win32). (Jani)
 - Fixed bug #25239 (ftp_fopen_wrapper not RFC compliant). (Sara)
+- Fixed bug #25166 (WDDX serializer handler missing in win32). (Jani)
+- Fixed bug #25109 (Possible crash when fetching field names in pgsql). (Ilia)
 
 25 Aug 2003, Version 4.3.3
 - Upgraded the bundled Expat library to version 1.95.6. (Jani)
